# care

./: .env.example  .gitignore  CALENDAR_SETUP_GUIDE.md  Dockerfile  README.md  docker-compose.yml  main.py  multi-agent_voice_sales_355ebd98.plan.md  package-lock.json  pyproject.toml  requirements.txt  twilio_2FA_recovery_code.txt  vapi.py
.github/workflows/: deploy-supabase-gcp-vm.yml  supabase-app-ci.yml
agents/livekit-agent-template/: livekit.toml
agents/livekit-worker/: pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_user_call_provider.py  003_medicine_message.py  004_phone_login_firebase_uid.py
app/: __init__.py  config.py  database.py  deps.py  main.py
app/api/: auth.py  auth_phone.py  calendar.py  calls.py  health.py  livekit.py  medicine.py  users.py  webhooks_exotel.py  webhooks_twilio.py
app/models/: __init__.py  calendar_event.py  call_log.py  medicine_reminder.py  user.py
app/schemas/: auth.py  calendar.py  calls.py  medicine.py
app/services/: calendar_sync.py  call_updates.py  crypto.py  exotel.py  firebase_auth.py  google_oauth.py  jwt_utils.py  (+4 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
scripts/: init_local_postgres.py  init_local_postgres.sql
supabase_app/: .env.example  .gitignore  draw.xml  index.html  package-lock.json  package.json  pre_call_intelligence_v2.html  preview.html  tailwind.config.js  vite.config.ts
tests/: conftest.py  test_api_health.py  test_exotel_format.py  test_exotel_webhook.py  test_jwt_utils.py  test_scheduling.py
voice_agent/: ui.py  voice.py
(+76 files in other folders)
