[project]
name = "smartcall-reminder"
version = "0.1.0"
description = "SmartCall Reminder MVP — FastAPI + Celery + Google Calendar + Exotel"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "cryptography>=44.0.0",
    "google-api-python-client>=2.154.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth>=2.36.0",
    "twilio>=9.0.0",
    "livekit-agents",
    "livekit-api>=1.0.0",
    "python-dotenv>=1.0.1",
    "firebase-admin>=6.6.0",
    "google-genai>=1.73.1",
    "openai-whisper>=20250625",
    "pyttsx3>=2.99",
    "soundfile>=0.13.1",
    "gradio>=5.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
